--- a/night_club/source/Colibri.Plugin.NightClub.csproj
+++ b/night_club/source/Colibri.Plugin.NightClub.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Colibri.cs" />
+    <Compile Include="DadosPerfil.cs" />
     <Compile Include="FormConfig.cs">
       <SubType>Form</SubType>
     </Compile>
