--- a/monitor_eventos/.editorconfig
+++ b/monitor_eventos/.editorconfig
@@ -3,8 +3,11 @@
 indent_style                                                             = space
 tab_width                                                                = 4
 trim_trailing_whitespace                                                 = true
+csharp_new_line_before_open_brace                                        = all
+csharp_new_line_before_else                                              = true
 csharp_new_line_before_catch                                             = true
-csharp_new_line_before_open_brace                                        = control_blocks, types, methods
+csharp_new_line_before_finally                                           = true
+csharp_new_line_between_query_expression_clauses                         = true
 csharp_space_after_keywords_in_control_flow_statements                   = true
 csharp_space_between_method_call_empty_parameter_list_parentheses        = false
 csharp_space_between_method_call_name_and_opening_parenthesis            = false
