Mudanças visuais (incompletas)

--- a/monitor_eventos/src/Plugin.Eventos.csproj
+++ b/monitor_eventos/src/Plugin.Eventos.csproj
@@ -42,6 +42,7 @@
     <Reference Include="DevExpress.XtraLayout.v18.1, Version=18.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraRichEdit.v18.1, Version=18.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraTreeList.v18.1, Version=18.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.Extensions" />
@@ -93,6 +94,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="eventos.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
