Alterado para usar layoutcontrol

--- a/monitor_eventos/src/App.config
+++ b/monitor_eventos/src/App.config
@@ -11,7 +11,7 @@
         <value>Skin/The Bezier</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
-        <value></value>
+        <value>Twenty</value>
       </setting>
       <setting name="TouchUI" serializeAs="String">
         <value></value>
@@ -26,12 +26,15 @@
         <value></value>
       </setting>
       <setting name="FontBehavior" serializeAs="String">
-        <value></value>
+        <value>UseSegoeUI</value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
         <value></value>
       </setting>
       <setting name="DPIAwarenessMode" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="RegisterBonusSkins" serializeAs="String">
         <value></value>
       </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
