--- a/templates_graficos/versao.ini
+++ b/templates_graficos/versao.ini
@@ -1,8 +1,8 @@
-; - A versão da extensão será a mesma retornada pelos plugins COL e DLL quando estes existirem na pasta client.
+﻿; - A versão da extensão será a mesma retornada pelos plugins COL e DLL quando estes existirem na pasta client.
 ; - Para plugins do tipo COP (Python), que são empacotados pelo SDK, e no caso de existir o versao.ini
 ;   será feita a geração dos arquivos de versão do plugin python com base neste arquivo.
 ; - Para todos os outros casos esse arquivo é considerado para o número da versão da extensão.
 [versaoinfo]
 MajorVersion = 1
 MinorVersion = 2
-Release = 1
+Release = 2
