--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "_ncr-library"]
 	path = _ncr-library
-	url = https://bitbucket.org/colibriagile/br-library.git
+	url = https://github.com/colibriagile/br-lib.git
