--- a/monitor_eventos/PluginEventos/Plugin.Eventos.csproj
+++ b/monitor_eventos/PluginEventos/Plugin.Eventos.csproj
@@ -105,7 +105,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Costura.Fody" Version="4.1.0" />
+    <PackageReference Include="Costura.Fody" Version="4.1.0" >
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Fody" Version="6.3.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
